src/objects/Survey_Question_Answer__c.object
<CustomObject>
    <fields>
        <fullName>Answer__c</fullName>
        <label>Answer</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Survey_Answer__c</fullName>
        <label>Survey Answer</label>
        <referenceTo>Survey_Answer__c</referenceTo>
        <relationshipLabel>Survey Question Answers</relationshipLabel>
        <relationshipName>Survey_Question_Answers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Survey_Question__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Survey Question</label>
        <referenceTo>Survey_Question__c</referenceTo>
        <relationshipLabel>Survey Question Answers</relationshipLabel>
        <relationshipName>Survey_Question_Answers</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Survey Question Answer</label>
    <nameField>
        <displayFormat>SQA-{0000}</displayFormat>
        <label>Survey Question Answer ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Question Answers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>